@@ -78,8 +78,18 @@
 				<group>
 					<name>main</name>
 				</group>
-				<hidden>true</hidden>
+				<hidden>false</hidden>
 				<position>7</position>
+			</value>
+		</entry>
+		<entry>
+			<key>pickedBestBefore</key>
+			<value>
+				<group>
+					<name>main</name>
+				</group>
+				<hidden>false</hidden>
+				<position>8</position>
 			</value>
 		</entry>
 		<entry>
@@ -89,7 +99,7 @@
 					<name>main</name>
 				</group>
 				<hidden>false</hidden>
-				<position>8</position>
+				<position>9</position>
 			</value>
 		</entry>
         <entry>
@@ -99,7 +109,7 @@
 					<name>main</name>
                 </group>
                 <hidden>false</hidden>
-                <position>9</position>
+                <position>10</position>
             </value>
         </entry>
 		<entry>
@@ -109,7 +119,7 @@
 					<name>main</name>
 				</group>
 				<hidden>false</hidden>
-				<position>10</position>
+				<position>11</position>
 			</value>
 		</entry>
 
