@@ -1079,3 +1079,6 @@ completeHandling.2=First, with at least amount
 completeHandling.3=Combination, exact matching amount
 completeHandling.4=Combination, min. amount difference
 completeHandling.5=Combination, min. plus amount difference
+
+pickedBestBefore=Picked Best Before
+pickedLotNumber=Picked Lot
