@@ -1065,3 +1065,6 @@ completeHandling.2=Erste mindestens passende Menge
 completeHandling.3=Kombi, genau passender Menge
 completeHandling.4=Kombi, kleinste Mengenabweichung
 completeHandling.5=Kombi, kleinste pos. Mengenabweichung
+
+pickedBestBefore=MHD (Entnommen)
+pickedLotNumber=Charge (Entnommen)
